// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component should allow expandable cell content: expand cell event 1`] = `
[
  [
    {
      "cellIndex": 0,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "compound",
    },
  ],
]
`;

exports[`Table Component should allow expandable cell content: expanded cell 1`] = `
<tr
  class="curiosity-table__tr pf-c-table__expandable-row pf-m-expanded"
  data-ouia-component-id="OUIA-Generated-TableRow-18"
  data-ouia-component-type="PF4/TableRow"
  data-ouia-safe="true"
>
  <td
    class="curiosity-table__td curiosity-table__td-expand-expanded curiosity-table__td-expand-wrapper"
    colspan="1"
  >
    <div
      class="curiosity-table__td-expand-content"
    >
      <div
        class="pf-c-table__expandable-row-content"
      >
        dolor sit expandable content
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table Component should allow expandable cell content: no expanded cell 1`] = `null`;

exports[`Table Component should allow expandable row content: expand row event 1`] = `
[
  [
    {
      "cellIndex": -1,
      "data": {
        "data": {
          "hello": "world",
        },
      },
      "isExpanded": true,
      "rowIndex": 0,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow expandable row content: expandable content 1`] = `
<table
  props="{
  "rows": [
    {
      "cells": [
        "dolor"
      ],
      "expandedContent": "dolor sit expandable content",
      "data": {
        "hello": "world"
      }
    },
    {
      "cells": [
        "sit"
      ]
    }
  ],
  "ariaLabel": null,
  "children": [],
  "className": "",
  "columnHeaders": [],
  "componentClassNames": {
    "table": "curiosity-table",
    "td": "curiosity-table__td",
    "tdAction": "curiosity-table__td-action",
    "tdSelect": "curiosity-table__td-select",
    "th": "curiosity-table__th",
    "tr": "curiosity-table__tr",
    "trExpand": "curiosity-table__tr-expand",
    "trExpanded": "curiosity-table__tr-expand-expanded",
    "trExpandedContent": "curiosity-table__tr-expand-content",
    "tdExpand": "curiosity-table__td-expand",
    "tdExpanded": "curiosity-table__td-expand-expanded",
    "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
    "tdExpandedContent": "curiosity-table__td-expand-content"
  },
  "isBorders": true,
  "isHeader": false,
  "isStriped": false,
  "onSelect": null,
  "onSort": null,
  "summary": null,
  "variant": "compact"
}"
>
  <div
    class="pf-l-grid"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <table
        class="curiosity-table  pf-c-table pf-m-grid-md pf-m-compact"
        data-ouia-component-id="OUIA-Generated-Table-5"
        data-ouia-component-type="PF4/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <tbody
          class=""
          role="rowgroup"
        >
          <tr
            class="curiosity-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-13"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="curiosity-table__td curiosity-table__td-expand pf-c-table__toggle"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                aria-label="Details"
                aria-labelledby="simple-node0 expand-toggle0"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="expand-toggle0"
                type="button"
              >
                <div
                  class="pf-c-table__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                    />
                  </svg>
                </div>
              </button>
            </td>
            <td
              class="undefined curiosity-table__td "
            >
              dolor
            </td>
          </tr>
        </tbody>
        <tbody
          class=""
          role="rowgroup"
        >
          <tr
            class="curiosity-table__tr"
            data-ouia-component-id="OUIA-Generated-TableRow-14"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="curiosity-table__td"
            />
            <td
              class="undefined curiosity-table__td "
            >
              sit
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</table>
`;

exports[`Table Component should allow expandable row content: expanded row 1`] = `
<tr
  class="curiosity-table__tr pf-c-table__expandable-row pf-m-expanded"
  data-ouia-component-id="OUIA-Generated-TableRow-15"
  data-ouia-component-type="PF4/TableRow"
  data-ouia-safe="true"
>
  <td
    class="curiosity-table__td curiosity-table__td-expand-expanded curiosity-table__td-expand-wrapper"
    colspan="2"
  >
    <div
      class="curiosity-table__td-expand-content"
    >
      <div
        class="pf-c-table__expandable-row-content"
      >
        dolor sit expandable content
      </div>
    </div>
  </td>
</tr>
`;

exports[`Table Component should allow expandable row content: no expanded row 1`] = `null`;

exports[`Table Component should allow selectable row content: select row content 1`] = `
<tr
  class="curiosity-table__tr"
  data-ouia-component-id="OUIA-Generated-TableRow-23"
  data-ouia-component-type="PF4/TableRow"
  data-ouia-safe="true"
>
  <td
    class="curiosity-table__td curiosity-table__td-select pf-c-table__check"
  >
    <label>
      <input
        aria-label="Select row 0"
        name="checkrow0"
        type="checkbox"
      />
    </label>
  </td>
  <td
    class=" curiosity-table__td "
  >
    dolor
  </td>
</tr>
`;

exports[`Table Component should allow selectable row content: select row input 1`] = `
[
  [
    {
      "data": {
        "dolorSit": "hello world",
      },
      "isSelected": true,
      "rowIndex": 1,
      "type": "row",
    },
  ],
]
`;

exports[`Table Component should allow sortable content: sortable content 1`] = `
<table
  class="curiosity-table  pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-7"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-19"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        aria-sort="none"
        class="curiosity-table__th pf-c-table__sort"
        scope="col"
      >
        <button
          class="pf-c-table__button"
          type="button"
        >
          <div
            class="pf-c-table__button-content"
          >
            <span
              class="pf-c-table__text"
            >
              lorem ipsum
            </span>
            <span
              class="pf-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                />
              </svg>
            </span>
          </div>
        </button>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-20"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        dolor
      </td>
    </tr>
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-21"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: ariaLabel and summary 1`] = `
<table
  aria-label="lorem ipsum aria-label"
  class="curiosity-table  pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-3"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
  summary="lorem ipsum summary"
>
  <thead
    class=""
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-7"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="curiosity-table__th"
        scope="col"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-8"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        dolor
      </td>
    </tr>
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-9"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: borders and table header removed 1`] = `
<table
  class="curiosity-table  pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-2"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-4"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        dolor
      </td>
    </tr>
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-5"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: className and variant 1`] = `
<table
  class="curiosity-table lorem-ipsum-class pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-4"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-10"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="curiosity-table__th"
        scope="col"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-11"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        dolor
      </td>
    </tr>
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-12"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should allow variations in table layout: generated rows 1`] = `
<table
  class="curiosity-table  pf-c-table pf-m-grid-md pf-m-compact"
  data-ouia-component-id="OUIA-Generated-Table-1"
  data-ouia-component-type="PF4/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class=""
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-1"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="curiosity-table__th"
        scope="col"
      >
        lorem ipsum
      </th>
    </tr>
  </thead>
  <tbody
    class=""
    role="rowgroup"
  >
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-2"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        dolor
      </td>
    </tr>
    <tr
      class="curiosity-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-3"
      data-ouia-component-type="PF4/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="undefined curiosity-table__td "
      >
        sit
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table Component should pass child components, nodes when there are no rows: children 1`] = `
<table
  props="{
  "isHeader": true,
  "columnHeaders": [
    "lorem ipsum"
  ],
  "rows": [],
  "children": [
    {}
  ],
  "ariaLabel": null,
  "className": "",
  "componentClassNames": {
    "table": "curiosity-table",
    "td": "curiosity-table__td",
    "tdAction": "curiosity-table__td-action",
    "tdSelect": "curiosity-table__td-select",
    "th": "curiosity-table__th",
    "tr": "curiosity-table__tr",
    "trExpand": "curiosity-table__tr-expand",
    "trExpanded": "curiosity-table__tr-expand-expanded",
    "trExpandedContent": "curiosity-table__tr-expand-content",
    "tdExpand": "curiosity-table__td-expand",
    "tdExpanded": "curiosity-table__td-expand-expanded",
    "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
    "tdExpandedContent": "curiosity-table__td-expand-content"
  },
  "isBorders": true,
  "isStriped": false,
  "onExpand": null,
  "onSelect": null,
  "onSort": null,
  "summary": null,
  "variant": "compact"
}"
>
  <div
    class="pf-l-grid"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      Loading...
    </div>
  </div>
</table>
`;

exports[`Table Component should render a basic component: basic 1`] = `
<table
  props="{
  "isHeader": true,
  "columnHeaders": [
    "lorem",
    "ipsum",
    "dolor",
    "sit"
  ],
  "ariaLabel": null,
  "children": [],
  "className": "",
  "componentClassNames": {
    "table": "curiosity-table",
    "td": "curiosity-table__td",
    "tdAction": "curiosity-table__td-action",
    "tdSelect": "curiosity-table__td-select",
    "th": "curiosity-table__th",
    "tr": "curiosity-table__tr",
    "trExpand": "curiosity-table__tr-expand",
    "trExpanded": "curiosity-table__tr-expand-expanded",
    "trExpandedContent": "curiosity-table__tr-expand-content",
    "tdExpand": "curiosity-table__td-expand",
    "tdExpanded": "curiosity-table__td-expand-expanded",
    "tdExpandedWrapper": "curiosity-table__td-expand-wrapper",
    "tdExpandedContent": "curiosity-table__td-expand-content"
  },
  "isBorders": true,
  "isStriped": false,
  "onExpand": null,
  "onSelect": null,
  "onSort": null,
  "rows": [],
  "summary": null,
  "variant": "compact"
}"
>
  <div
    class="pf-l-grid"
  >
    <div
      class="pf-l-grid__item pf-m-12-col"
    >
      <div
        class="ins-c-table__empty"
      >
         
        <div
          class="pf-c-empty-state pf-m-sm"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <h2
              class="pf-c-title pf-m-lg"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              t(table.empty-state_title, No results found)
            </h2>
            <div
              class="pf-c-empty-state__body"
            >
              t(table.empty-state_description, Clear all filters and try again.)
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</table>
`;
